# perplecs

./: :w  Cargo.toml  design.md
ecs/: Cargo.toml
ecs-macros/: Cargo.toml
ecs-macros/src/: bundle.rs  lib.rs
ecs/src/: archetype.rs  bundle.rs  entity.rs  lib.rs  query.rs  world.rs
examples/: derive_bundle.rs  physics.rs
src/: lib.rs
tests/: simple_querys.rs
