[package]
name = "perplecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perplecs-ecs = { path = "ecs"}
perplecs-macros = { path = "ecs-macros" }

[workspace]
members = [
	"ecs",
    "ecs-macros",
]

[lib]

[[example]]
name = "physics"
path = "examples/physics.rs"

[[example]]
name = "derive_bundle"
path = "examples/derive_bundle.rs"
