[package]
name = "perplecs"
version = "0.1.0"
edition = "2021"

[dependencies]
perplecs-ecs = { path = "ecs"}
perplecs-macros = { path = "ecs-macros" }

[workspace]
members = [
	"ecs",
    "ecs-macros",
]

[lib]

[features]
default = ["std"]
std = ["ecs/std"]

[[example]]
name = "physics"
path = "examples/physics.rs"

[[example]]
name = "derive_bundle"
path = "examples/derive_bundle.rs"
